Closed
Bug 1697779
Opened 4 years ago
Closed 4 years ago
Perma js/src/jit-test/tests/wasm/gc/disabled.js | /builds/worker/checkouts/gecko/js/src/jit-test/lib/wasm.js:55:21 Error: Assertion failed: got false, expected true (code 3, args "") [0.1 s] when Gecko 88 merges to Beta on 2021-03-22
Categories
(Core :: JavaScript: WebAssembly, defect, P1)
Core
JavaScript: WebAssembly
Tracking
()
VERIFIED
FIXED
88 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox86 | --- | unaffected |
| firefox87 | --- | unaffected |
| firefox88 | + | verified |
People
(Reporter: aryx, Assigned: rhunt)
Details
(Keywords: regression)
Attachments
(1 file)
[task 2021-03-11T10:53:46.614Z] TEST-PASS | js/src/jit-test/tests/wasm/gc/debugger.js | Success (code 0, args "--ion-eager --ion-offthread-compile=off --ion-check-range-analysis --ion-extra-checks --no-sse3 --no-threads") [0.1 s]
[task 2021-03-11T10:53:46.631Z] /builds/worker/checkouts/gecko/js/src/jit-test/lib/wasm.js:55:21 Error: Assertion failed: got false, expected true
[task 2021-03-11T10:53:46.631Z] Stack:
[task 2021-03-11T10:53:46.631Z] @/builds/worker/checkouts/gecko/js/src/jit-test/tests/wasm/gc/disabled.js:25:30
[task 2021-03-11T10:53:46.631Z] Exit code: 3
[task 2021-03-11T10:53:46.631Z] FAIL - wasm/gc/disabled.js
[task 2021-03-11T10:53:46.631Z] TEST-UNEXPECTED-FAIL | js/src/jit-test/tests/wasm/gc/disabled.js | /builds/worker/checkouts/gecko/js/src/jit-test/lib/wasm.js:55:21 Error: Assertion failed: got false, expected true (code 3, args "") [0.1 s]
[task 2021-03-11T10:53:46.631Z] INFO exit-status : 3
[task 2021-03-11T10:53:46.631Z] INFO timed-out : False
[task 2021-03-11T10:53:46.631Z] INFO stderr 2> /builds/worker/checkouts/gecko/js/src/jit-test/lib/wasm.js:55:21 Error: Assertion failed: got false, expected true
[task 2021-03-11T10:53:46.631Z] INFO stderr 2> Stack:
[task 2021-03-11T10:53:46.631Z] INFO stderr 2> @/builds/worker/checkouts/gecko/js/src/jit-test/tests/wasm/gc/disabled.js:25:30
etc.
Flags: needinfo?(rhunt)
Updated•4 years ago
|
Assignee: nobody → rhunt
Severity: -- → S2
Status: NEW → ASSIGNED
Priority: -- → P1
| Assignee | ||
Comment 1•4 years ago
|
||
A previous commit made isValidTypeCode used in the fallthrough case of decoding types.
This doesn't work when features have been disabled at compile-time as disabled types
will not be caught by earlier cases and will fallthrough to isValidTypeCode which
does no checking of runtime flags of compile time flags and accept the type.
This commit tweaks the organization to prevent this from happening. Additionally, a
test that is valid with function-references enabled is moved from the gc/disabled.js
test to a new function-references/disabled.js test.
Pushed by rhunt@eqrion.net:
https://hg.mozilla.org/integration/autoland/rev/d76fb0e9c1d0
Fix feature gate testing and move test. r=lth
Comment 3•4 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 88 Branch
| Assignee | ||
Updated•4 years ago
|
Flags: needinfo?(rhunt)
| Reporter | ||
Comment 4•4 years ago
|
||
Verified fixed with today's central-as-beta simulation.
Status: RESOLVED → VERIFIED
Updated•4 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•