Bug 1697779 - Fix feature gate testing and move test. r=lth

A previous commit made `isValidTypeCode` used in the fallthrough case of decoding types.
This doesn't work when features have been disabled at compile-time as disabled types
will not be caught by earlier cases and will fallthrough to isValidTypeCode which
does no checking of runtime flags of compile time flags and accept the type.

This commit tweaks the organization to prevent this from happening. Additionally, a
test that is valid with function-references enabled is moved from the gc/disabled.js
test to a new function-references/disabled.js test.

Differential Revision: https://phabricator.services.mozilla.com/D108047